Prevent card history items from jumping left when toggling new cards

--- a/Files/src/css/component/collection/card-history.component.scss
+++ b/Files/src/css/component/collection/card-history.component.scss
@@ -35,7 +35,7 @@ ul {
 	padding: 0;
 	margin: 0;
     height: 160px;
-    overflow: auto;
+    overflow-y: scroll;
 }
 
 .more-data-container {
